Revamped the logic for reading TracTrac race list: Now the loading of the race list does no longer read clientparams.php, it is read upon tracking start